--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,9 +13,13 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "devDependencies": {
     "prettier": "3.6.2"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.10"
   }
 }
